--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
-  app:
+  web:
     tty: true
     stdin_open: true
     build: .
     volumes:
-      - .:/var/www/internship_test_questions/current
+      - .:/rails
     command: bundle exec rails server --port=3000 --binding='0.0.0.0'
     ports:
       - 6002:3000
